log/build_2024-05-07_14-25-49/my_tf2_package/stderr.log
  File "/home/oh/slam_ws/install/my_tf2_package/lib/python3.10/site-packages/my_tf2_package/my_static_cart_tf2_broadcaster.py", line 67
    self.transformations_target = [
                                  ^
SyntaxError: '[' was never closed

